objects/CSS_Options__c.object
<CustomObject>
    <fields>
        <fullName>ESN__c</fullName>
        <label>ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupName__c</fullName>
        <label>GroupName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OptionNumber__c</fullName>
        <label>OptionNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RepairGroup__c</fullName>
        <label>RepairGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS Options</relationshipLabel>
        <relationshipName>CSS_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CSS Options</label>
    <nameField>
        <label>CSS Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>